
@startuml

skinparam backgroundColor #FEFEFE
skinparam wrapWidth 600
package "DMA_Framework_Component" #DDDDDD
{

class "DMA::IComponent"
{
}

}

package "DMA_PlantumlView_API" #DDDDDD
{

class "CUMLView"
{
}

class "CUMLViewComponent"
{
}

}

package "DMA_Settings_API" #DDDDDD
{

class "CSettingsManagerClient"
{
}

}

package "Qt" #DDDDDD
{

class "QScrollArea"
{
}

}

'====================Inheritance section====================
CSettingsManagerClient <|-- CUMLView : extends
QScrollArea <|-- CUMLView : extends
CSettingsManagerClient <|-- CUMLViewComponent : extends
DMA::IComponent <|-- CUMLViewComponent : implements

'====================Dependencies section====================
CUMLViewComponent "1" o-- "1" CUMLView : uses

@enduml